--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>React App</title>
+    <script src="https://apis.google.com/js/api.js"></script>
 </head>
 <body>
     <div id="app"></div>
