--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>React App</title>
     <script src="https://apis.google.com/js/api.js"></script>
+    <link rel="stylesheet" href="/public/styles/style.css">
 </head>
 <body>
     <div id="app"></div>
